ExprParser.py
# Generated from Expr.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'table'", "'('", "','", "')'", 
                     "'SELECT'", "'FROM'", "'ORDER'", "'INSERT'", "'INTO'", 
                     "'DELETE'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ROW", "COL", "ID", "STRING", "WS", "NEWLINE" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_create_stmt = 2
    RULE_select_stmt = 3
    RULE_insert_stmt = 4
    RULE_delete_stmt = 5
    RULE_delete_data_stmt = 6
    RULE_colum_index = 7
    RULE_row_index = 8

    ruleNames =  [ "prog", "expr", "create_stmt", "select_stmt", "insert_stmt", 
                   "delete_stmt", "delete_data_stmt", "colum_index", "row_index" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    ROW=13
    COL=14
    ID=15
    STRING=16
    WS=17
    NEWLINE=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 2626) != 0:
                self.state = 18
                self.expr()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_stmt(self):
            return self.getTypedRuleContext(ExprParser.Create_stmtContext,0)


        def insert_stmt(self):
            return self.getTypedRuleContext(ExprParser.Insert_stmtContext,0)


        def select_stmt(self):
            return self.getTypedRuleContext(ExprParser.Select_stmtContext,0)


        def delete_stmt(self):
            return self.getTypedRuleContext(ExprParser.Delete_stmtContext,0)


        def delete_data_stmt(self):
            return self.getTypedRuleContext(ExprParser.Delete_data_stmtContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.create_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.insert_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.select_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 29
                self.delete_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 30
                self.delete_data_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def colum_index(self):
            return self.getTypedRuleContext(ExprParser.Colum_indexContext,0)


        def row_index(self):
            return self.getTypedRuleContext(ExprParser.Row_indexContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_create_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_stmt" ):
                listener.enterCreate_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_stmt" ):
                listener.exitCreate_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_stmt" ):
                return visitor.visitCreate_stmt(self)
            else:
                return visitor.visitChildren(self)




    def create_stmt(self):

        localctx = ExprParser.Create_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(ExprParser.T__0)
            self.state = 34
            self.match(ExprParser.T__1)
            self.state = 35
            self.match(ExprParser.ID)
            self.state = 36
            self.match(ExprParser.T__2)
            self.state = 37
            self.colum_index()
            self.state = 38
            self.match(ExprParser.T__3)
            self.state = 39
            self.row_index()
            self.state = 40
            self.match(ExprParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def colum_index(self):
            return self.getTypedRuleContext(ExprParser.Colum_indexContext,0)


        def row_index(self):
            return self.getTypedRuleContext(ExprParser.Row_indexContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def COL(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COL)
            else:
                return self.getToken(ExprParser.COL, i)

        def getRuleIndex(self):
            return ExprParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_stmt" ):
                return visitor.visitSelect_stmt(self)
            else:
                return visitor.visitChildren(self)




    def select_stmt(self):

        localctx = ExprParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(ExprParser.T__5)
            self.state = 43
            self.colum_index()
            self.state = 44
            self.match(ExprParser.T__3)
            self.state = 45
            self.row_index()
            self.state = 46
            self.match(ExprParser.T__6)
            self.state = 47
            self.match(ExprParser.ID)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 48
                self.match(ExprParser.T__7)
                self.state = 49
                self.match(ExprParser.COL)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def colum_index(self):
            return self.getTypedRuleContext(ExprParser.Colum_indexContext,0)


        def row_index(self):
            return self.getTypedRuleContext(ExprParser.Row_indexContext,0)


        def STRING(self):
            return self.getToken(ExprParser.STRING, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_insert_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_stmt" ):
                listener.enterInsert_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_stmt" ):
                listener.exitInsert_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_stmt" ):
                return visitor.visitInsert_stmt(self)
            else:
                return visitor.visitChildren(self)




    def insert_stmt(self):

        localctx = ExprParser.Insert_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_insert_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ExprParser.T__8)
            self.state = 56
            self.match(ExprParser.T__9)
            self.state = 57
            self.match(ExprParser.ID)
            self.state = 58
            self.match(ExprParser.T__2)
            self.state = 59
            self.colum_index()
            self.state = 60
            self.match(ExprParser.T__3)
            self.state = 61
            self.row_index()
            self.state = 62
            self.match(ExprParser.T__3)
            self.state = 63
            self.match(ExprParser.STRING)
            self.state = 64
            self.match(ExprParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delete_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_delete_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete_stmt" ):
                listener.enterDelete_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete_stmt" ):
                listener.exitDelete_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete_stmt" ):
                return visitor.visitDelete_stmt(self)
            else:
                return visitor.visitChildren(self)




    def delete_stmt(self):

        localctx = ExprParser.Delete_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_delete_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ExprParser.T__10)
            self.state = 67
            self.match(ExprParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delete_data_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def colum_index(self):
            return self.getTypedRuleContext(ExprParser.Colum_indexContext,0)


        def row_index(self):
            return self.getTypedRuleContext(ExprParser.Row_indexContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_delete_data_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete_data_stmt" ):
                listener.enterDelete_data_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete_data_stmt" ):
                listener.exitDelete_data_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete_data_stmt" ):
                return visitor.visitDelete_data_stmt(self)
            else:
                return visitor.visitChildren(self)




    def delete_data_stmt(self):

        localctx = ExprParser.Delete_data_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_delete_data_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ExprParser.T__10)
            self.state = 70
            self.match(ExprParser.T__1)
            self.state = 71
            self.match(ExprParser.ID)
            self.state = 72
            self.match(ExprParser.T__2)
            self.state = 73
            self.colum_index()
            self.state = 74
            self.match(ExprParser.T__3)
            self.state = 75
            self.row_index()
            self.state = 76
            self.match(ExprParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Colum_indexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COL(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COL)
            else:
                return self.getToken(ExprParser.COL, i)

        def getRuleIndex(self):
            return ExprParser.RULE_colum_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColum_index" ):
                listener.enterColum_index(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColum_index" ):
                listener.exitColum_index(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColum_index" ):
                return visitor.visitColum_index(self)
            else:
                return visitor.visitChildren(self)




    def colum_index(self):

        localctx = ExprParser.Colum_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_colum_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ExprParser.COL)
            self.state = 79
            self.match(ExprParser.T__11)
            self.state = 80
            self.match(ExprParser.COL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Row_indexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROW(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ROW)
            else:
                return self.getToken(ExprParser.ROW, i)

        def getRuleIndex(self):
            return ExprParser.RULE_row_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRow_index" ):
                listener.enterRow_index(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRow_index" ):
                listener.exitRow_index(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRow_index" ):
                return visitor.visitRow_index(self)
            else:
                return visitor.visitChildren(self)




    def row_index(self):

        localctx = ExprParser.Row_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_row_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ExprParser.ROW)
            self.state = 83
            self.match(ExprParser.T__11)
            self.state = 84
            self.match(ExprParser.ROW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





